<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.notesmotivation.viewModels.AddViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_add_activity"
                        style="@style/ThemeFormTitle"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/i_want_to"
                        style="@style/ThemeForm"
                        />

                    <EditText
                        android:id="@+id/edit_title_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_i_want_to"
                        android:text="@={viewModel.plannedActivity.title}"
                        style="@style/ThemeForm"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/do_it_at_date"
                        style="@style/ThemeForm"
                        />

                    <TextView
                        android:id="@+id/date_to_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_do_it_at_date"
                        style="@style/ThemeForm"
                        />


                    <Button
                        android:id="@+id/create_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_activity"
                        style="@style/ThemeForm"
                        android:theme="@style/ThemeForm"
                        />


                </LinearLayout>

            </ScrollView>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>